# BMS_analysis_battery

./: .claude.json.backup  .dockerignore  .env.local.example  .env.providers.example  .gitattributes  .gitconfig  .gitignore  ABOUT.md  APPROACHES.md  ARCHIVED_PROJECTS.md  ASSUMPTIONS.md  AWS_CREDENTIALS_SETUP.txt  BACKTEST_RESULTS_COMPREHENSIVE.txt  CASH_CONVERSION_CYCLE_FINAL_RESULTS.md  CHANGELOG.md  CHAT_SESSION_SUMMARY.md  CLAUDE.md  COMPLETE_STRATEGY_EXECUTION_PLAN.md  COMPREHENSIVE_DATA_SOURCE_INVENTORY.md  COMPREHENSIVE_STOCK_ANALYSIS_2026.md  COMPRESSION_CLEANUP_SUMMARY.txt  Colab_Stock_Analysis_Runner.ipynb  DAILY_MAILER_QUICKSTART.md  DAILY_MAILER_README.md  DATA_ACCESS.md  DATA_COMPRESSION_REPORT.md  DATA_INTEGRATION_OPTIONS.md  DELIVERABLES_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_FULL_UNIVERSE.md  DEPLOYMENT_RESULTS_GERMAN_MOMENTUM_BREAKOUT.txt  DEPLOYMENT_TEST_REPORT.md  Dockerfile  EUREX_DATA_EXTRACTION_COMPLETE.md  FILTER_INSIGHTS_VISUAL_SUMMARY.txt  FINAL_PROJECT_SUMMARY.md  FULL_MARKET_UNIVERSE_DEEP_ANALYSIS.md  FULL_UNIVERSE_FILTER_EVALUATION.txt  FULL_UNIVERSE_IMPLEMENTATION_SUMMARY.txt  GERMAN_DATA_EXTRACTION_QUICKSTART.md  (+108 more)
Downloads/: backtest_screeners.py  daily_combined_report.py  full_us_market_scan.py  ipo_tracker.py  market_data_cache.py  pattern_discovery.py  portfolio_builder.py  r_analysis.py  sentiment_pipeline.py  stock_utils.py  symbol_master.py
api-data-integration/: README.md  SSRI_vs_PPAC_Comparison_Report.xlsx  cold_chain_outlet_map.py  compile_all_outlets_excel.py  compress_data_archive.sh  create_master_integrated_excel.py  enhanced_geo_map_with_kaggle.py  extract_all_ssri_pumps.py  extract_bpcl_regional_dealerships.py  extract_cashatpos_from_pdf.py  extract_cold_chain_data.py  load_kaggle_indian_oil_outlets.py  validate_outlets_against_ssri.py
backend/: .dockerignore  Dockerfile  column_map.py  damodaran.py  main.py  requirements.txt  scheduler.py
bms/: __init__.py  bms_controller.py  cell_balancer.py  cell_model.py  chemistries.py  config.py  driving_profiles.py  manufacturer_profiles.py  power_limits.py  simulation.py  soc_estimator.py  soh_estimator.py  supervisor.py  thermal.py  vehicles.py
data/: ar_tickers_full.json  at_tickers_full.json  au_tickers_full.csv  au_tickers_full.json  br_tickers_full.json  bse_stocks_fundamental.csv  ca_tickers_full.json  cn_sse_tickers_full.json  cn_sz_tickers_full.json  de_tickers_full.json  dk_tickers_full.json  eurex_FDAX_contracts.csv  eurex_FESX_contracts.csv  eurex_FEU3_contracts.csv  eurex_FGBL_contracts.csv  eurex_ODAX_contracts.csv  eurex_OESX_contracts.csv  eurex_OGBL_contracts.csv  eurex_holidays.csv  eurex_pegu_all_europe.csv  eurex_products.csv  eurex_schema.txt  eurex_trading_hours.csv  europe_all_list.csv  europe_extended_list.csv  europe_tickers_full.json  fr_tickers_full.json  frankfurt_list.csv  german_pegu_scored.csv  global_universe.json  global_universe_flat.csv  hk_tickers_full.json  ind_nifty500list.csv  india_pegu_scored.csv  india_tickers_full.csv  it_tickers_full.json  jp_tickers_full.json  kr_tickers_full.json  london_list.csv  no_tickers_full.json  (+14 more)
deploy/: README.md
docs/: README.md  _build_repo_pages.py  _config.yml  discom-calculator.html  index.html  repos.html  style.css
export-analysis/: .claude-settings.json  BUDGET_ESTIMATES_VS_ANALYSIS_RECONCILIATION.md  DEBT_BORROWING_TRENDS_ANALYSIS.md  EXECUTIVE_SUMMARY_COMPREHENSIVE.md  EXPORT_INSIGHTS_SUMMARY.md  EXTENDED_ANALYSIS_2020_2026.csv  EXTENDED_COMPARISON_2020_2026.md  FIVE_YEAR_POST_PANDEMIC_COMPARISON.md  HIGH_OPPORTUNITY_2026_PROJECTIONS.csv  HIGH_OPPORTUNITY_EXPORTS.csv  IMPORT_EXPORT_ANALYSIS_2025_26.md  MARKITDOWN_PREPROCESSING_GUIDE.md  MEGA_GROWTH_EXPORTS.csv  MULTI_SOURCE_INTEGRATION_ANALYSIS.md  RBI_RESERVES_vs_TRADE_DEFICIT_ANALYSIS.md  README.md  TAX_COLLECTION_FISCAL_RESERVES_ANALYSIS.md  TOKEN_SAVINGS_REPORT.md  TOP_OPPORTUNITIES.json  YEAR_ON_YEAR_TRENDS_DETERIORATION_ANALYSIS.md  export_analysis.py  export_extended_analysis.py  export_insights.py  export_opportunities.py  import_export_comparison.py  markitdown-preprocessor.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
fuel-pump-locations-map/: locations-data.js
german_market/: README.md  a7_xetra_reference.py  cash_conversion_cycle_analysis.py  comprehensive_extraction.py  eurex_graphql.py  extract_and_push.sh  german_pegu_score.py  (+4 more)
(+1115 files in other folders)
